--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,11 @@ body {
     padding: 10px 20px;
     border-radius: 10px;
     margin-top: 20px;
+    transition: 0.5s;
 }
 
 #showcase .button:hover {
     background: black;
     color: white;
+    transition: 0.5s;
 }
