--- a/style.css
+++ b/style.css
@@ -1,43 +1,106 @@
-.loader {
-    margin: auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    border: 16px solid rgb(224, 224, 224);
-    width: 120px;
-    height: 120px;
-    border-top-color: #1abc9c;
-    border-bottom-color: #1abc9c;
-    border-radius: 50%;
-    animation: chargeur 3s linear infinite;
+.containeur {
+    text-align: center;
+    transition: 0.5s all ease-in;
 }
 
-@keyframes chargeur {
-    0% {
-        transform: rotate(0deg) scale(1);
-        border-top-color: red;
-        border-bottom-color: red;
-    }
+.containeur:hover {
+    transform: scale(1.1);
+    transition: 0.5s all ease-in;
+}
 
-    25% {
-        border-top-color: blue;
-        border-bottom-color: blue;
-    }
+.h3 {
+    font-size:  35px;
+    margin: auto;
+    background: rgb(180, 180, 180);
+    padding: 50px;
+    margin: 450px;
+    position: relative;
+    top: -440px;
+}
 
+.h2 {
+    font-size: 45px;
+    margin: auto;
+    background: rgba(100, 100, 100, 0.781);
+    padding: 20px;
+    margin: 450px;
+    position: relative;
+    top: -890px;
+}
+
+.details {
+    position: relative;
+    top: -1300px;
+    font-size: 30px;
+    text-align: center;
+    background: rgba(231, 231, 231, 0.781);
+    padding: 12px;
+    margin: 450px;
+}
+
+
+.detail {
+    position: relative;
+    top: -1300px;
+    font-size: 30px;
+    text-align: center;
+    background: rgba(231, 231, 231, 0.781);
+    padding: 12px;
+    margin: 450px;
+    position: relative;
+    top: -1634px;
     
-    50% {
-        transform: rotate(350deg) scale(1);
-        border-top-color: springgreen;
-        border-bottom-color: springgreen;
-    }
+}
 
-    75% {
-        border-top-color: springgreen;
-        border-bottom-color: springgreen;
-    }
 
-    100% {
-        transform: rotate(720deg) scale(1);
-        border-top-color: blue;
-        border-bottom-color: blue;
-    }
+.etail {
+    position: relative;
+    top: -1300px;
+    font-size: 30px;
+    text-align: center;
+    background: rgba(231, 231, 231, 0.781);
+    padding: 12px;
+    margin: 450px;
+    position: relative;
+    top: -2200px;
+}
+
+
+.tail {
+    position: relative;
+    top: -1300px;
+    font-size: 30px;
+    text-align: center;
+    background: rgba(231, 231, 231, 0.781);
+    padding: 12px;
+    margin: 450px;
+    position: relative;
+    top: -2766px;
+}
+
+.nul {
+    position: relative;
+    top: -40px;
+}
+
+.detail:hover {
+    background: rgb(139, 139, 139);
+    transition: 0.3s;
+}
+
+.etail:hover {
+    background: rgb(139, 139, 139);
+    transition: 0.3s;
+}
+
+
+.details:hover {
+    background: rgb(139, 139, 139);
+    transition: 0.3s;
+}
+
+
+.tail:hover {
+    background: rgb(139, 139, 139);
+    transition: 0.3s;
 }
