--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     background: #fff; 
+    display: flex;
 }
 
 #flexContaineur {
@@ -9,7 +10,9 @@ body {
     display: flex; 
     align-items: center;
     justify-content: center;
+    
 }
+
 .threeCards {
     width: 300px;
     height: 500px;
@@ -17,13 +20,19 @@ body {
     position: relative;
     transition: 0.2s ease-in;
     box-shadow: 0px 10px 30px black;
+    transition: all 0.3s;
 }
+
+.threeCards:hover {
+    transform: scale(1.1);
+}
+
 
 .header {
     height: 200px;
     width: 300px;
     position: relative;
-    background: rgba(137, 196,244,0.5);
+    background: rgba(137, 196, 244, 0.521);
 }
 
 .header h2 {
@@ -35,7 +44,7 @@ body {
 #spanPris {
     font-size: 40px;
     position: relative;
-    top: 145px;
+    top: 130px;
 }
 
 .price {
@@ -50,5 +59,45 @@ body {
 .price h1 {
     margin: 0;
     text-align: center;
-    
+    font-size: 30px;
+    position: relative;
+    top: 40px;
+}
+
+.details {
+    position: relative;
+    top: 151px;
+    background: white;
+    height: 60px;
+    text-align: center;
+    transition: all 0.2s ease-in;
+}
+
+.details:hover {
+    background: rgba(181,208,230,0.1);
+}
+
+#btn a {
+    text-decoration: none;
+    height: 50px;
+    width: 120px;
+    display: block;
+    margin: auto;
+    text-align: center;
+    line-height: 50px;
+    position: relative;
+    top: 10px;
+    border-radius: 30px;
+    border: 1px solid #22a7f0;
+    color: rgb(137, 196,244);
+    position: relative;
+    top: 145px;
+    transition: 0.7s;
+    background: white;
+}
+
+#btn a:hover {
+    background: rgb(34, 167, 240);
+    color: white;
+    transition: 0.7s;
 }
