--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background: #fff; 
     display: flex;
     background-repeat: no-repeat;
-    background-size: 1400px;
+    background-size: 100%;
     background-image: url(https://images.pexels.com/photos/6771900/pexels-photo-6771900.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
 
 }
