--- a/style.css
+++ b/style.css
@@ -1,22 +1,19 @@
 body {
     margin: 0;
     background: #fff; 
-    display: flex;
     background-repeat: no-repeat;
     background-size: 100%;
-    background-image: url(https://images.pexels.com/photos/6771900/pexels-photo-6771900.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-
+    display: flex;
+    background-image: url(ttps://images.pexels.com/photos/6771900/pexels-photo-6771900.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
 }
+
 
 #flexContaineur {
     width: 100%; 
     height: 100vh; 
-    display: flex; 
+    display: flex;
     align-items: center;
     justify-content: center;
-    width: 30%;
-    z-index: 999;
-    
 }
 
 .threeCards {
@@ -38,7 +35,7 @@ body {
     height: 200px;
     width: 300px;
     position: relative;
-    background: rgba(229, 255, 0, 0.699);
+    background: rgba(0, 255, 242,0.8);
 }
 
 .header h2 {
@@ -56,7 +53,7 @@ body {
 .price {
     height: 120px;
     width: 300px;
-    background: rgba(229, 255, 0);
+    background: rgba(0, 255, 242);
     clip-path: polygon(0 0 , 100% 0 , 100% 75% , 0 100%);
     position: absolute;
     top: 0;
@@ -80,7 +77,7 @@ body {
 }
 
 .details:hover {
-    background: rgba(229, 255, 0);
+    background: rgba(181, 208, 230,0.3);
 }
 
 #btn a {
@@ -94,15 +91,30 @@ body {
     position: relative;
     top: 10px;
     border-radius: 30px;
-    border: 1px solid rgba(229, 255, 0);  
-    color: rgba(229, 255, 0);
+    border: 1px solid rgb(0, 255, 242);  
+    color: rgba(0, 255, 242);
     position: relative;
     top: 155px;
     transition: 0.7s;
 }
 
 #btn a:hover {
-    background: rgba(229, 255, 0);
+    background: rgba(0, 255, 242);
     color: white;
     transition: 0.7s;
+}
+
+@media screen and (max-width: 1200px) {
+
+
+    #flexContaineur {
+        width: 100%; 
+        height: 2000px; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+
 }
