--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     background-image: url(ttps://images.pexels.com/photos/6771900/pexels-photo-6771900.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
 }
 
-
 #flexContaineur {
     width: 100%; 
     height: 100vh; 
@@ -77,7 +76,8 @@ body {
 }
 
 .details:hover {
-    background: rgba(181, 208, 230,0.3);
+    background: rgba(181, 208, 230, 0.418);
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 }
 
 #btn a {
