--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     height: 450px;
     flex-shrink: 0;
     border-radius: 5px;
-    margin: 0 20px;
+    margin: 20px;
     box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.6);
 }
 
@@ -175,8 +175,8 @@ body {
 @media screen and (max-width: 1200px) {
 
     body{
+        height: 1500px;
         flex-direction: column;
     }
-
 
 }
