--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 
 .cartes {
     background: #f1f1f1;
-    width: 250px;
-    height: 450px;
+    width: 300px;
+    height: 550px;
     flex-shrink: 0;
     border-radius: 5px;
     margin: 20px;
@@ -25,7 +25,7 @@ body {
 .partImg {
     height: 60%;
     width: 100%;
-    background: url(le.jpg);
+    background: url(galaxieBlanc.jpg);
     background-position: top;
     position: relative;
     border-bottom: 3px solid rgba(0, 0, 0, 0.1);
@@ -134,6 +134,10 @@ body {
     margin: 2px;
 }
 
+.color::after {
+    content: "couleurs du telephone";
+}
+
 .color {
     margin: 7px;
 }
@@ -149,12 +153,12 @@ body {
 }
 
 .rond:nth-child(3) {
-    background: rgb(0, 17, 255);
+    background: rgb(255, 251, 0);
     
 }
 
 .rond:nth-child(4) {
-    background: rgb(170, 170, 170);
+    background: rgb(0, 81, 255);
     
 }
 
