--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
 
 .filtreBlue:hover .btnRreveal {
     opacity: 1;
+    color: black;
     transition: opacity 0.2s ease;
 }
 
@@ -158,7 +159,7 @@ body {
 }
 
 .rond:nth-child(4) {
-    background: rgb(0, 81, 255);
+    background: rgb(0, 255, 0);
     
 }
 
@@ -175,7 +176,7 @@ body {
 @media screen and (max-width: 1200px) {
 
     body{
-        height: 1500px;
+        height: 1900px;
         flex-direction: column;
     }
 
