--- a/style.css
+++ b/style.css
@@ -149,23 +149,21 @@ body {
 }
 
 .rond:nth-child(2) {
-    background: rgb(255, 0, 0);
+    background: rgb(207, 207, 207);
     
 }
 
 .rond:nth-child(3) {
-    background: rgb(255, 251, 0);
+    background: #000;
     
 }
 
 .rond:nth-child(4) {
-    background: rgb(0, 255, 0);
-    
+    background: rgb(207, 207, 207);
 }
 
 .rond:nth-child(5) {
-    background: rgb(255, 0, 170);
-    
+    background: #0000;
 }
 
 
