--- a/style.css
+++ b/style.css
@@ -179,3 +179,26 @@ body {
     }
 
 }
+
+
+/* animation 1 */
+
+.anim1 {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+}
+
+.anim1 div {
+    transform-origin: 40px 40px;
+}
+
+.anim1 div::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 37px;
+    width: 6px;
+    border-radius: 20%;
+}
